--- a/main_app/templates/bases/delete_base.html
+++ b/main_app/templates/bases/delete_base.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'bases/base.html' %}
 {% block content %}
     {% block delete_title %}{% endblock delete_title %}
     <form method="post">
