--- a/main_app/templates/bases/base.html
+++ b/main_app/templates/bases/base.html
@@ -6,6 +6,10 @@
     <title>Crystallia{% block title %}{% endblock title %}</title>
 </head>
 <body>
+    <nav>
+        <a href="{% url 'crystal_list' %}">All crystals</a>
+        <a href="{% url 'crystal_create' %}">Add a crystal</a>
+    </nav>
     {% block content %}{% endblock content %}
 </body>
 </html>
