add links to detailed views on crystal list template

--- a/main_app/templates/crystal/crystal_list.html
+++ b/main_app/templates/crystal/crystal_list.html
@@ -3,7 +3,9 @@
 {% block content %}
     <h1>Crystals</h1>
     {% for crystal in crystals %}
-        <h3>{{crystal.name}}</h3>
+        <a href="{{crystal.get_absolute_url}}">
+            <h3>{{crystal.name}}</h3>
+        </a>
         {%empty%}
             <h3>No crystals :(</h3>
     {% endfor %}
