--- a/main_app/templates/crystal/crystal_detail.html
+++ b/main_app/templates/crystal/crystal_detail.html
@@ -1,6 +1,8 @@
 {% extends 'bases/base.html' %}
 {% block content %}
     <h1 class="crys-name">{{crystal.name}}</h1>
+    <a href="{% url 'crystal_update' crystal.pk %}">Update Crystal</a>
+    <a href="{% url 'crystal_delete' crystal.pk %}">Delete Crystal</a>
     {% if crystal.mohs_hardness != None %}
         <h3 class="crys-mohs">Mohs Hardness: {{crystal.mohs_hardness}}</h3>
     {% endif %}
