rename model Crystal to CrystalType

--- a/main_app/templates/bases/base.html
+++ b/main_app/templates/bases/base.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <nav>
-        <a href="{% url 'crystal_list' %}">All crystals</a>
-        <a href="{% url 'crystal_create' %}">Add a crystal</a>
+        <a href="{% url 'crystal_type_list' %}">All crystals</a>
+        <a href="{% url 'crystal_type_create' %}">Add a crystal</a>
     </nav>
     {% block content %}{% endblock content %}
 </body>
