--- a/main_app/templates/crystal_type/crystal_type_list.html
+++ b/main_app/templates/crystal_type/crystal_type_list.html
@@ -2,9 +2,9 @@
 
 {% block content %}
     <h1>Crystals</h1>
-    {% for crystal in crystals %}
-        <a href="{{crystal.get_absolute_url}}">
-            <h3>{{crystal.name}}</h3>
+    {% for crystaltype in crystaltypes %}
+        <a href="{{crystaltype.get_absolute_url}}">
+            <h3>{{crystaltype.name}}</h3>
         </a>
         {%empty%}
             <h3>No crystals :(</h3>
