--- a/main_app/templates/crystal_type/crystal_type_update.html
+++ b/main_app/templates/crystal_type/crystal_type_update.html
@@ -1,4 +1,4 @@
 {% extends 'bases/create_base.html' %}
 {% block create_title %}
-    <h2>Updating {{crystal.name}}</h2>
+    <h2>Updating {{crystaltype.name}}</h2>
 {% endblock create_title %}
