templates/crystal_types/ - change mentions of 'crystals' to appropriate 'crystal types'

--- a/main_app/templates/crystal_type/crystal_type_delete.html
+++ b/main_app/templates/crystal_type/crystal_type_delete.html
@@ -1,4 +1,4 @@
 {% extends 'bases/delete_base.html' %}
 {% block delete_title %}
-    <h2>Are you sure you want to delete this crystal?</h2>
+    <h2>Are you sure you want to delete this crystal type?</h2>
 {% endblock delete_title %}
