add collection nav links in base

--- a/main_app/templates/bases/base.html
+++ b/main_app/templates/bases/base.html
@@ -11,6 +11,8 @@
         <a href="{% url 'crystal_type_create' %}">Add a crystal type</a>
         <a href="{% url 'crystal_list' %}">All crystals</a>
         <a href="{% url 'crystal_create' %}">Add a crystal</a>
+        <a href="{% url 'collection_list' %}">All collections</a>
+        <a href="{% url 'collection_create' %}">Create a collection</a>
     </nav>
     {% block content %}{% endblock content %}
 </body>
