--- a/main_app/templates/bases/base.html
+++ b/main_app/templates/bases/base.html
@@ -8,13 +8,27 @@
     <title>Crystallia{% block title %}{% endblock title %}</title>
 </head>
 <body>
-    <nav>
-        <a href="{% url 'crystal_type_list' %}">All crystal types</a>
-        <a href="{% url 'crystal_type_create' %}">Add a crystal type</a>
-        <a href="{% url 'crystal_list' %}">All crystals</a>
-        <a href="{% url 'crystal_create' %}">Add a crystal</a>
-        <a href="{% url 'collection_list' %}">All collections</a>
-        <a href="{% url 'collection_create' %}">Create a collection</a>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'crystal_type_list' %}">All crystal types</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'crystal_type_create' %}">Add a crystal type</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'crystal_list' %}">All crystals</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'crystal_create' %}">Add a crystal</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'collection_list' %}">All collections</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'collection_create' %}">Create a collection</a>
+            </li>
+        </ul>
     </nav>
     {% block content %}{% endblock content %}
 </body>
